--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "watch": "babel ./client --out-dir public --presets=es2015,react --ignore=node_modules,public --source-maps inline --watch"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,15 @@
   },
   "homepage": "https://github.com/Knguy47/hrr23-TwitchPlayer#readme",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
-    "mongoose": "^4.9.7"
+    "mongoose": "^4.9.7",
+    "path": "^0.12.7",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
