--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
+    "mongoose-auto-increment": "^5.0.1",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
