--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
     "mongoose-auto-increment": "^5.0.1",
