--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "path": "^0.12.7",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-hammerjs": "^0.5.0"
   }
 }
