--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "watch": "babel ./client --out-dir public --presets=es2015,react --ignore=node_modules,public --source-maps inline --watch"
+    "watch": "babel ./client --out-dir public --presets=es2015,react --ignore=node_modules,public, --source-maps inline --watch"
   },
   "repository": {
     "type": "git",
